# Oxylang

./: .gitignore  .gitmodules  CMakeLists.txt  Oxy.slnx  SPEC.md
Examples/Basic/: main.oxy  project.toml
Examples/Game/: project.toml
Examples/Game/src/: pong.oxy  raylib.oxy
Examples/Test01/: generics.test.oxy  run.sh  structs.test.oxy  test.oxy
Examples/Test02/: test02.toml
Examples/Test02/.github/instructions/: oxylang_instructions.instructions.md
Examples/Test02/src/: common.oxy  graphics.oxy  main.oxy  relative_test.oxy
Oxylang/: Class1.cs  CompilationUnit.cs  ConsoleLogger.cs  Definitions.cs  Language.cs  Oxylang.csproj  SPEC.md
Oxylang.Build/: Arguments.cs  Compiler.cs  Oxylang.Build.csproj  Program.cs  Project.cs  ProjectCompiler.cs  README.md
Oxylang/Systems/: ITransformer.cs  IVisitor.cs  Lexer.cs
Oxylang/Systems/Parsing/: Ast.cs  Attribute.cs  IParser.cs  Parser.cs
Oxylang/Systems/Parsing/Nodes/: AddressOfExpression.cs  AlignOfExpression.cs  AssignmentExpression.cs  BinaryExpression.cs  BlockStatement.cs  BreakStatement.cs  CastExpression.cs  ContinueStatement.cs  DereferenceExpression.cs  ForStatement.cs  FunctionCallExpression.cs  FunctionDefinition.cs  IfStatement.cs  ImportStatement.cs  LiteralExpression.cs  MemberAccessExpression.cs  MethodCallExpression.cs  PostfixExpression.cs  ReturnStatement.cs  Root.cs  SizeOfExpression.cs  StringExpression.cs  StructDefinition.cs  StructInitializerExpression.cs  UnaryExpression.cs  VariableDeclaration.cs  VariableExpression.cs  WhileStatement.cs
Oxylang/Systems/Transformers/: AttributeAnalyzer.cs  CodeGenerator.cs  DesugarTransformer.cs  RelianceBuilder.cs  TypeAnalyzer.cs
build-system/: CMakeLists.txt
build-system/src/: Builder.cpp  Builder.h  Project.cpp  Project.h  main.cpp
cli/: CMakeLists.txt
cli/src/: Compiler.cpp  Compiler.h  main.cpp
examples/raylib_pong/: project.toml
examples/raylib_pong/src/: graphics.oxy  main.oxy
liboxy/std/: math.oxy  std.oxy
oxylang/: CMakeLists.txt
oxylang/src/: BodyParser.cpp  BodyParser.h  CodeGenerator.cpp  CodeGenerator.h  Definitions.h  Error.h  FunctionType.h  ImportType.h  ModuleData.h  ModuleDataVisitor.cpp  ModuleDataVisitor.h  Parser.cpp  Parser.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  StructType.h  Token.h  Tokenizer.cpp  Tokenizer.h  TypeList.h  TypeOfType.h  Visitor.h
oxylang/src/Ast/: AddressOfExpression.h  AllocateExpression.h  AssignmentExpression.h  Attribute.h  BinaryExpression.h  BreakStatement.h  CastExpression.h  DereferenceAssignmentStatement.h  ExpressionStatement.h  ForStatement.h  Function.h  FunctionCallExpression.h  IdentifierExpression.h  IfStatement.h  ImportStatement.h  LiteralExpression.h  MemberAccessExpression.h  NestedExpression.h  Node.h  Nodes.h  PostfixExpression.h  ReturnStatement.h  Root.h  SizeOfExpression.h  StructDeclaration.h  StructInitializerExpression.h  SubscriptExpression.h  TypeExpression.h  UnaryExpression.h  VariableDeclaration.h  WhileStatement.h
test/: pong.oxy  run.sh  struct.oxy  test.oxy  test2.oxy
(+5 files in other folders)
